# kata-ai-agent

./: .env  .gitignore  Dockerfile  KATA.md  README.md  fly.toml  pyproject.toml
.devcontainer/: devcontainer.json
assets/articles/: 001-article.md  002-article.md  003.md  004.md
assets/emails/: 001-mail.md  002-mail.md  003-mail.md
notebook/01-interact-with-llm/: 01-simple-call-http.ipynb  02-prediction.ipynb  03-chain-of-thought.ipynb  04-structured-output.ipynb
notebook/02-augmented-llm/: 05-tool-call.ipynb  06-rag-import-qdrant.py  06-rag.ipynb  07-memory.ipynb  07-rag.ipynb
notebook/03-autonomous-agent/: 08-autonomous-agent.py
notebook/04-workflow/: 09-workflow.ipynb  10-evaluation.ipynb
utils/: file_reader.py
