[project]
name = "kata-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.68.0",
    "dspy>=3.0.4",
    "dspy-qdrant>=0.1.4",
    "fastmcp>=2.14.4",
    "jupyter>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "mem0-mcp-server>=0.2.1",
    "mlflow>=3.8.1",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "sentence-transformers>=5.2.0",
]
